# grantmatch-agent

./: .gitignore  README.md  agents-cli-manifest.yaml  convert_video.py  pyproject.toml
app/: agent.py  agent_runtime_app.py  api.py  mcp_server.py
app/app_utils/: telemetry.py  typing.py
app/skills/: grant_search.py  pii_redactor.py
deployment/terraform/single-project/: service.tf  variables.tf
deployment/terraform/single-project/vars/: env.tfvars
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.tsx  index.css  types.ts
tests/: helpers.py
tests/eval/datasets/: basic-dataset.json
tests/integration/: test_agent_runtime_app.py
tests/unit/: test_pii.py
